# whippet_sort

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build_third_party.sh  gen_tpc_data.py  run_docker.sh
benchmark/read_order_percentile/: README.md  with_duckdb.py
cmake/: utils.cmake
src/: CMakeLists.txt  velox_scan_sort.h
